--- a/Lab2/Lab2.vcxproj
+++ b/Lab2/Lab2.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="SimpleOrder.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Storage.cpp" />
+    <ClCompile Include="tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.h" />
