--- a/Lab2/Lab2.vcxproj.filters
+++ b/Lab2/Lab2.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="SimpleOrder.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="tinyxml2.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Product.h">
