--- a/Lab2/Lab2.vcxproj.filters
+++ b/Lab2/Lab2.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="tinyxml2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\Lab1\Hud.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Product.h">
@@ -54,6 +57,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="tinyxml2.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Lab1\Hud.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
