--- a/Lab2/Lab2.vcxproj
+++ b/Lab2/Lab2.vcxproj
@@ -139,20 +139,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Lab1\Hud.cpp" />
+    <ClCompile Include="Hud.cpp" />
     <ClCompile Include="Product.cpp" />
     <ClCompile Include="Shop.cpp" />
+    <ClCompile Include="ShopUI.cpp" />
     <ClCompile Include="SimpleOrder.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Storage.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Lab1\Hud.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Hud.h" />
     <ClInclude Include="IOrder.h" />
     <ClInclude Include="Product.h" />
     <ClInclude Include="Shop.h" />
+    <ClInclude Include="ShopUI.h" />
     <ClInclude Include="SimpleOrder.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="tinyxml2.h" />
