--- a/Lab2/Lab2.vcxproj.filters
+++ b/Lab2/Lab2.vcxproj.filters
@@ -33,7 +33,10 @@
     <ClCompile Include="tinyxml2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\Lab1\Hud.cpp">
+    <ClCompile Include="ShopUI.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Hud.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -59,7 +62,10 @@
     <ClInclude Include="tinyxml2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\Lab1\Hud.h">
+    <ClInclude Include="ShopUI.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Hud.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
